tdf#165706: Fix visualization of MultiFirmControls in EditMode

'Simple' FormControls were rendered correctly with SDPR
active, but 'Multi' FormControls did not. Found an error
regarding use of MapModes in that drawing code below in
vcl that did not handle an evtl. set MapMode, corrected
that.

Change-Id: I51d7318c2950b7d70e3064ba628909cb17416bae
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183196
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>
(cherry picked from commit 6a7e2f4ba5581946adf26195f0782f938c56919f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183202
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>